using rx api more